dino3d translated to spanish

--- a/low.html
+++ b/low.html
@@ -40,13 +40,13 @@
 
 	<div id="chrome-no-internet">
 		<div class="poster"></div>
-		<h1>Нет подключения к Интернету</h1>
+		<h1>Sin conexión a Internet</h1>
 		<div class="info">
-			<p>Попробуйте сделать следующее:</p>
+			<p>Intenta hacer lo siguiente:</p>
 			<ul>
-				<li>Проверьте сетевые кабели, модем и маршрутизатор.</li>
-				<li>Подключитесь к сети Wi-Fi ещё раз.</li>
-				<li id="game-start" class="hidden">&laquo;Начать игру&raquo;</li>
+				<li>Compruebe los cables de red, el módem y el enrutador.</li>
+				<li>Vuelva a conectarse a la red Wi-Fi.</li>
+				<li id="game-start" class="hidden">&laquo;Comenzar el juego&raquo;</li>
 			</ul>
 			<small>ERR_LOADING_ASSETS</small>
 			<small id="game-load-progress">0%</small>
@@ -54,7 +54,7 @@
 	</div>
 
 	<div id="game-restart" class="hidden">
-		<h1>ИГРА ЗАКОНЧЕНА</h1>
+		<h1>GAME OVER</h1>
 		<img src="media/repeat.png">
 	</div>
 
